--- a/src/components/Paginator/Paginator.module.css
+++ b/src/components/Paginator/Paginator.module.css
@@ -1,7 +1,11 @@
 .lad_pagination {
     display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 15px;
-    max-width: 200px;
+    justify-content: center;
+    margin: 10px 0px 10px;
     cursor: pointer;
+}
+.selected_page {
+    font-weight: bold;
+    background-color: #1f68ba;
+    padding: 5px;
 }
