--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -54,12 +54,18 @@
 .img_block img {
   height: 230px;
 }
-.online_ind {
+.img_block {
+  margin-right: 15px;
+}
+.link_img {
   position: relative;
-  left: -38px;
+}
+.online_ind {
+  position: absolute;
+  left: 0px;
   background-color: rgba(66, 133, 17, 1);
   font-size: 12px;
-  bottom: 4px;
+  bottom: 6px;
   color: white;
 }
 .user_name {
