--- a/src/components/LadCatalog/LadCatalog.module.css
+++ b/src/components/LadCatalog/LadCatalog.module.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     padding-right: 20px;
-    max-width: 315px;
+    max-width: 320px;
 }
 .ind_online{
     color: rgba(66, 133, 17, 1);
@@ -26,6 +26,7 @@
 }
 .view_prof_btn:hover {
     text-decoration: underline;
+    color: white;
 }
 .city_from {
     font-size: 14px;
