--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -62,7 +62,7 @@
 .id_girl {
     font-size: 12px;
 }
-.btn_wrap {
+.app_btn_wrap {
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
