--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -16,6 +16,14 @@
 @import "./components/icon-invite-video";
 @import "./components/icon-start-chat";
 @import "./components/icon-write-letter";
+@import "./components/message";
+@import "./components/avatar";
+@import "./components/dialogs";
+@import "./components/chat-sidebar";
+@import "./components/messages";
+@import "./components/chatInput";
+@import "./components/status";
 
 /* pages */
 @import "./pages/pnf1";
+@import "./pages/text-chat";
