--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -23,7 +23,11 @@
 @import "./components/messages";
 @import "./components/chatInput";
 @import "./components/status";
+@import "./components/btn-view-profile";
+@import "./components/btn-follow-star";
+@import "./components/user";
 
 /* pages */
 @import "./pages/pnf1";
 @import "./pages/text-chat";
+@import "./pages/catalog";
